--- a/css/styles.css
+++ b/css/styles.css
@@ -2,5 +2,5 @@ body
 {
     color: blue;
     text-align: center;
-    font-family:'Courier New', Courier, monospace;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
