--- a/css/styles.css
+++ b/css/styles.css
@@ -2,5 +2,5 @@ body
 {
     color: red;
     text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
