--- a/todo-app-cun/src/components/counter/Counter.css
+++ b/todo-app-cun/src/components/counter/Counter.css
@@ -10,3 +10,8 @@ button {
     font-size : 50px;
     padding: 15px 30px;
 }
+.reset{
+    background-color: red;
+    color : white;
+    width :200px;
+}
